# hw

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE.md  README.md  TestEngine.py  pyproject.toml
.github/workflows/: main.yml
docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html
docs/_sources/: index.rst.txt
etc/data/: nasa93dem.csv  parth_repgrid.csv  repgrid1.json  ritwik_repgrid.csv  urvashi_repgrid.csv
sphinx/source/: conf.py  src.rst
src/: bin.lua  cluster.lua  clustering.py  col.py  cols.py  config.py  contrast_sets.py  data.py  discretization.py  hw1.py  lists.py  main.py  misc_functions.py  num.py  optimization.py  pre_process.py  project_data.py  query.py  range.py  rows.py  rule.py  script.lua  sym.py  the.py  update.py  utils.py
tests/: test_around.py  test_basic.py  test_bins.py  test_bootmu.py  test_cliffs.py  test_clone.py  test_cluster.py  test_copy.py  test_csv.py  test_data.py  test_dist.py  test_every.py  test_five.py  test_gauss.py  test_half.py  test_main.py  test_num.py  test_nums.py  test_optimize.py  test_position.py  test_pre.py  test_prototypes.py  test_rand.py  test_repcols.py  test_reprows.py  test_sample.py  test_six.py  test_sk.py  test_some.py  test_stats.py  test_sway.py  test_sym.py  test_syms.py  test_synonyms.py  test_the.py  test_tiles.py  test_tree.py  test_xpln.py
