[tool.poetry]
name = "hw"
version = "0.1.0"
description = ""
authors = ["Parth Thosani <pthosan@ncsu.edu>", "Ritwik Tiwari <rtiwari2@ncsu.edu>", "Urvashi Kar <ukar@ncsu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"
isort = "^5.10.0"
black = "^22.6.0"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
mypy = "^0.991"
pytest-cov = '^4.0.0'

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
